RESOLVED FIXED108378
Objective-C API: exceptionHandler needs to be released in JSContext dealloc
https://bugs.webkit.org/show_bug.cgi?id=108378
Summary Objective-C API: exceptionHandler needs to be released in JSContext dealloc
Mark Hahnenberg
Reported 2013-01-30 14:07:17 PST
JSContext has a (copy) exceptionHandler property that it doesn't release in dealloc. That sounds like the potential for a leak. It should be released.
Attachments
Patch (1.25 KB, patch)
2013-01-30 14:11 PST, Mark Hahnenberg
fpizlo: review+
Mark Hahnenberg
Comment 1 2013-01-30 14:07:33 PST
Mark Hahnenberg
Comment 2 2013-01-30 14:11:40 PST
Mark Hahnenberg
Comment 3 2013-01-30 14:18:33 PST
Note You need to log in before you can comment on or make changes to this bug.