Objective-C API: exceptionHandler needs to be released in JSContext dealloc https://bugs.webkit.org/show_bug.cgi?id=108378

Reviewed by Filip Pizlo.

JSContext has a (copy) exceptionHandler property that it doesn't release in dealloc.
That sounds like the potential for a leak. It should be released.

* API/JSContext.mm:
(-[JSContext dealloc]):


Canonical link: https://commits.webkit.org/126581@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@141305 268f45cc-cd09-0410-ab3c-d52691b4dbfc